fix: revert Collections.emptySet/emptyMap/emptyList to original API
Motivation:
Review feedback: prefer Collections.emptyMap(), Collections.emptySet(),
Collections.emptyList() over Map.of(), Set.of(), List.of() for empty
collections since they use well-known immutable singleton APIs.

Modification:
Revert empty collection conversions while keeping non-empty
Arrays.asList -> List.of and Collections.singletonList -> List.of
conversions.

Result:
Empty collections use the established Collections.empty* API.