@@ -48,6 +48,7 @@ import org.junit.AfterClass;
 import org.junit.BeforeClass;
 import org.junit.Test;
 
+import java.util.Collections;
 import java.util.Comparator;
 import java.util.List;
 import java.util.Map;
@@ -170,7 +171,7 @@ public class BigQueryEndToEndTest extends EndToEndHelper {
   @Test
   public void listNewDataset() throws ExecutionException, InterruptedException {
     List<Dataset> datasets =
-        BigQuery.listDatasets(OptionalInt.empty(), Optional.empty(), Map.of())
+        BigQuery.listDatasets(OptionalInt.empty(), Optional.empty(), Collections.emptyMap())
             .runWith(Sink.seq(), system)
             .toCompletableFuture()
             .get();
@@ -250,7 +251,7 @@ public class BigQueryEndToEndTest extends EndToEndHelper {
                 tableId(),
                 OptionalLong.empty(),
                 OptionalInt.empty(),
-                List.of(),
+                Collections.emptyList(),
                 BigQueryMarshallers.tableDataListResponseUnmarshaller(A.class))
             .runWith(Sink.seq(), system)
             .toCompletableFuture()
@@ -328,7 +329,7 @@ public class BigQueryEndToEndTest extends EndToEndHelper {
   @Test
   public void notListDeletedDataset() throws ExecutionException, InterruptedException {
     List<Dataset> datasets =
-        BigQuery.listDatasets(OptionalInt.empty(), Optional.empty(), Map.of())
+        BigQuery.listDatasets(OptionalInt.empty(), Optional.empty(), Collections.emptyMap())
             .runWith(Sink.seq(), system)
             .toCompletableFuture()
             .get();
